--- a/API/package.json
+++ b/API/package.json
@@ -22,6 +22,7 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.14.1",
+    "nodemailer": "^7.0.3",
     "sass": "^1.89.0"
   },
   "devDependencies": {
