--- a/Frontend/blog/package.json
+++ b/Frontend/blog/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.10.0",
     "react": "^19.1.0",
     "react-devtools": "^6.1.5",
     "react-dom": "^19.1.0",
