--- a/Frontend/blog/package.json
+++ b/Frontend/blog/package.json
@@ -14,6 +14,7 @@
     "react": "^19.1.0",
     "react-devtools": "^6.1.5",
     "react-dom": "^19.1.0",
+    "react-router-dom": "^7.6.3",
     "sass": "^1.89.2"
   },
   "devDependencies": {
