--- a/API/package.json
+++ b/API/package.json
@@ -20,9 +20,12 @@
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "express-validator": "^7.2.1",
+    "fs-extra": "^11.3.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "mysql2": "^3.14.1",
     "nodemailer": "^7.0.3",
+    "path": "^0.12.7",
     "sass": "^1.89.0"
   },
   "devDependencies": {
